added link to demo

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 ﻿PORT=3000
 SECURITY_KEY=<32 bit key>
 ALGORITHM=aes-256-cbc
-HEX_ID=<hex-based string, must be divided by 2>
+HEX_ID=<hex-based string, length must be divisible by 2>
